syntax = "proto3";

package deployment.v1;

import "google/type/datetime.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message Deployment {
  string id = 1;
  string commit_hash = 2;
  string commit_author = 3;
  string component_id = 4;
  string created_by_id = 5;
  repeated string install_ids = 6;

  google.type.DateTime updated_at = 7;
  google.type.DateTime created_at = 8;
}

message GetDeploymentRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message GetDeploymentResponse {
  Deployment deployment = 1;
}

message GetDeploymentsByAppsRequest {
  repeated string app_ids = 1 [(validate.rules).repeated.items.string.len = 26];
}

message GetDeploymentsByAppsResponse {
  repeated Deployment deployments = 1;
}

message GetDeploymentsByComponentsRequest {
  repeated string component_ids = 1 [(validate.rules).repeated.items.string.len = 26];
}

message GetDeploymentsByComponentsResponse {
  repeated Deployment deployments = 1;
}

message GetDeploymentsByInstallsRequest {
  repeated string install_ids = 1 [(validate.rules).repeated.items.string.len = 26];
}

message GetDeploymentsByInstallsResponse {
  repeated Deployment deployments = 1;
}

message CreateDeploymentRequest {
  string component_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string created_by_id = 2;
}

message CreateDeploymentResponse {
  Deployment deployment = 1;
}
