syntax = "proto3";

package deployments.v1;

import "deployments/v1/start.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message GetInfoRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string component_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string deployment_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

// GetInfoResponse returns infrastructure information about the org
message GetInfoResponse {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  deployments.v1.StartResponse response = 2;
}
